Thu Mar 15 19:12:31 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (lazy_zip): rescue StopIteration returned by
	  Enumerator#next.

Thu Mar 15 18:19:53 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (lazy_zip, lazy_cycle): Enumerator::Lazy#{zip,cycle}
	  should be eager when a block is given, to be consistent with
	  Enumerable#{zip,cycle}.

Thu Mar 15 17:45:27 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (InitVM_Enumerator): renamed Enumerable::Lazy to
	  Enumerator::Lazy.

Thu Mar 15 16:37:38 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (enumerator_lazy): added cycle to the documentation.

Thu Mar 15 15:37:42 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fix warning line number.

Thu Mar 15 15:19:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (lazy_cycle): check argument number overflow before
	  creating temporary array.

Thu Mar 15 15:04:54 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_strtod): no need to check same digit for hexdigit
	  twice.  [ruby-dev:45363][Bug #6146]

	* parse.y (sym_check_asciionly): check ascii compatibility before
	  scanning for code range.

	* parse.y (intern_str): set to us-ascii if ascii only.
	  [ruby-dev:45363][Bug #6146]

	* file.c (ruby_enc_find_basename): allow NULL as alllen.
	  [ruby-dev:45363][Bug #6146]

Thu Mar 15 14:49:31 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_conv_enc_opts): default to original encoding.

Thu Mar 15 13:47:17 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (env_str_new, rb_f_getenv, env_fetch): use rb_str_conv_enc()
	  instead of rb_str_encode() to simplify the code.

Thu Mar 15 12:44:50 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (rb_w32_ugetenv): new API to
	  accept and to return UTF-8 strings.

	* win32/win32.c (rb_w32_getenv): follow above change.

	* win32/win32.c (rb_w32_get_environ): returns UTF-8 environment area.
